chore(jest-snapshot-utils): replace `chalk` with `picocolors`

--- a/packages/jest-snapshot-utils/package.json
+++ b/packages/jest-snapshot-utils/package.json
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "@jest/types": "workspace:*",
-    "chalk": "^4.0.0",
     "graceful-fs": "^4.2.9",
-    "natural-compare": "^1.4.0"
+    "natural-compare": "^1.4.0",
+    "picocolors": "^1.1.1"
   },
   "devDependencies": {
     "@types/graceful-fs": "^4.1.3",
