--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.12.1",
     "babel-jest": "workspace:*",
+    "example-test-module": "workspace:*",
     "jest": "workspace:*",
     "jest-environment-jsdom": "workspace:*"
   },
@@ -18,6 +19,9 @@
     "test": "jest"
   },
   "jest": {
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "^example-test-module$": "example-test-module"
+    }
   }
 }
