--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -11,7 +11,6 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.12.1",
     "babel-jest": "workspace:*",
-    "example-test-module": "workspace:*",
     "jest": "workspace:*",
     "jest-environment-jsdom": "workspace:*"
   },
@@ -19,9 +18,6 @@
     "test": "jest"
   },
   "jest": {
-    "testEnvironment": "jsdom",
-    "moduleNameMapper": {
-      "^example-test-module$": "example-test-module"
-    }
+    "testEnvironment": "jsdom"
   }
 }
