--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsdoc": "^50.0.0",
     "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unicorn": "^57.0.0",
     "execa": "^5.0.0",
@@ -66,7 +65,7 @@
     "node-notifier": "^10.0.0",
     "p-limit": "^3.1.0",
     "pkg-dir": "^5.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.5.3",
     "promise": "^8.0.2",
     "read-pkg": "^5.2.0",
     "resolve": "^1.20.0",
@@ -100,8 +99,8 @@
     "jest-jasmine": "JEST_JASMINE=1 yarn jest",
     "jest-jasmine-ci": "yarn jest-jasmine --color --config jest.config.ci.mjs",
     "jest-coverage": "yarn jest --coverage",
-    "lint": "eslint . --cache --ext js,jsx,cjs,mjs,ts,tsx,md",
-    "lint:prettier-script": "prettier . \"!**/*.{js,jsx,cjs,mjs,ts,tsx}\" --cache",
+    "lint": "eslint . --cache",
+    "lint:prettier-script": "prettier . --cache",
     "lint:prettier": "yarn lint:prettier-script --write",
     "lint:prettier:ci": "yarn lint:prettier-script --check",
     "lint-ts-files": "node scripts/lintTs.mjs",
