--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,5 +58,5 @@ workflows:
           name: test-node-partial-<< matrix.node-version >>
           matrix:
             parameters:
-              node-version: ['16', '18', '20', '21']
+              node-version: ['16', '18', '20', '21', '22']
       - test-jest-jasmine
