chore: migrate `eslint-plugin-import` to `eslint-plugin-import-x`
close #15599

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-import-resolver-typescript": "^4.0.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import-x": "^4.12.2",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsdoc": "^50.0.0",
     "eslint-plugin-markdown": "^5.1.0",
