--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@crowdin/cli": "^4.0.0",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/js": "^9.21.0",
+    "@eslint/markdown": "^6.4.0",
     "@jest/globals": "workspace:*",
     "@jest/test-utils": "workspace:*",
     "@lerna-lite/cli": "^3.0.0",
@@ -36,7 +37,6 @@
     "eslint-plugin-import-x": "^4.12.2",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsdoc": "^50.0.0",
-    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unicorn": "^59.0.0",
