--- a/packages/jest-schemas/package.json
+++ b/packages/jest-schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jest/schemas",
-  "version": "30.0.0-alpha.7",
+  "version": "30.0.0-beta.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/jestjs/jest.git",
