Move `jest-get-type` and `diff-sequences` into the `@jest` org.

--- a/packages/expect/package.json
+++ b/packages/expect/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@jest/expect-utils": "workspace:*",
-    "jest-get-type": "workspace:*",
+    "@jest/get-type": "workspace:*",
     "jest-matcher-utils": "workspace:*",
     "jest-message-util": "workspace:*",
     "jest-mock": "workspace:*",
