--- a/packages/jest-snapshot/package.json
+++ b/packages/jest-snapshot/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-syntax-typescript": "^7.7.2",
     "@babel/types": "^7.3.3",
     "@jest/expect-utils": "workspace:*",
+    "@jest/get-type": "workspace:*",
     "@jest/snapshot-utils": "workspace:*",
     "@jest/transform": "workspace:*",
     "@jest/types": "workspace:*",
@@ -33,7 +34,6 @@
     "expect": "workspace:*",
     "graceful-fs": "^4.2.9",
     "jest-diff": "workspace:*",
-    "jest-get-type": "workspace:*",
     "jest-matcher-utils": "workspace:*",
     "jest-message-util": "workspace:*",
     "jest-util": "workspace:*",
