--- a/packages/expect-utils/package.json
+++ b/packages/expect-utils/package.json
@@ -19,7 +19,7 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "jest-get-type": "workspace:*"
+    "@jest/get-type": "workspace:*"
   },
   "devDependencies": {
     "immutable": "^5.0.0",
