--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.6",
+    "@jest/get-type": "workspace:*",
     "@jest/pattern": "workspace:*",
     "@jest/test-sequencer": "workspace:*",
     "@jest/types": "workspace:*",
@@ -48,7 +49,6 @@
     "jest-circus": "workspace:*",
     "jest-docblock": "workspace:*",
     "jest-environment-node": "workspace:*",
-    "jest-get-type": "workspace:*",
     "jest-regex-util": "workspace:*",
     "jest-resolve": "workspace:*",
     "jest-runner": "workspace:*",
