--- a/packages/jest-get-type/package.json
+++ b/packages/jest-get-type/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-get-type",
+  "name": "@jest/get-type",
   "description": "A utility function to get the type of a value",
   "version": "30.0.0-beta.1",
   "repository": {
