--- a/packages/jest-leak-detector/package.json
+++ b/packages/jest-leak-detector/package.json
@@ -19,7 +19,7 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "jest-get-type": "workspace:*",
+    "@jest/get-type": "workspace:*",
     "pretty-format": "workspace:*"
   },
   "devDependencies": {
