--- a/packages/jest-matcher-utils/package.json
+++ b/packages/jest-matcher-utils/package.json
@@ -23,9 +23,9 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
+    "@jest/get-type": "workspace:*",
     "chalk": "^4.0.0",
     "jest-diff": "workspace:*",
-    "jest-get-type": "workspace:*",
     "pretty-format": "workspace:*"
   },
   "devDependencies": {
