--- a/packages/jest-validate/package.json
+++ b/packages/jest-validate/package.json
@@ -19,10 +19,10 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
+    "@jest/get-type": "workspace:*",
     "@jest/types": "workspace:*",
     "camelcase": "^6.2.0",
     "chalk": "^4.0.0",
-    "jest-get-type": "workspace:*",
     "leven": "^3.1.0",
     "pretty-format": "workspace:*"
   },
