--- a/packages/jest-resolve/package.json
+++ b/packages/jest-resolve/package.json
@@ -22,6 +22,7 @@
     "chalk": "^4.0.0",
     "graceful-fs": "^4.2.9",
     "jest-haste-map": "workspace:*",
+    "jest-pnp-resolver": "^1.2.3",
     "jest-util": "workspace:*",
     "jest-validate": "workspace:*",
     "slash": "^3.0.0",
