#15638 Change default behavior of 'node' test environment to 'soft' delete globals at teardown
This commit adds three configurable options to the globals cleanup at teardown:
 - 'off': no cleanup whatsoever
 - 'soft': "deleted" properties will emit a deprecation warning if accessed
 - 'hard': actually delete the properties

The default behavior is 'soft'.

--- a/packages/jest-environment-node/package.json
+++ b/packages/jest-environment-node/package.json
@@ -24,7 +24,8 @@
     "@jest/types": "workspace:*",
     "@types/node": "*",
     "jest-mock": "workspace:*",
-    "jest-util": "workspace:*"
+    "jest-util": "workspace:*",
+    "jest-validate": "workspace:*"
   },
   "devDependencies": {
     "@jest/test-utils": "workspace:*",
