--- a/packages/jest-util/package.json
+++ b/packages/jest-util/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "@types/graceful-fs": "^4.1.3",
-    "@types/picomatch": "^4.0.0"
+    "@types/picomatch": "^4.0.0",
+    "lodash": "^4.17.19"
   },
   "engines": {
     "node": "^18.14.0 || ^20.0.0 || ^22.0.0 || >=24.0.0"
