--- a/packages/jest-environment-node/package.json
+++ b/packages/jest-environment-node/package.json
@@ -24,10 +24,12 @@
     "@jest/types": "workspace:*",
     "@types/node": "*",
     "jest-mock": "workspace:*",
-    "jest-util": "workspace:*"
+    "jest-util": "workspace:*",
+    "jest-validate": "workspace:*"
   },
   "devDependencies": {
-    "@jest/test-utils": "workspace:*"
+    "@jest/test-utils": "workspace:*",
+    "clsx": "^2.0.0"
   },
   "engines": {
     "node": "^18.14.0 || ^20.0.0 || ^22.0.0 || >=24.0.0"
