--- a/packages/jest-resolve/package.json
+++ b/packages/jest-resolve/package.json
@@ -25,14 +25,11 @@
     "jest-pnp-resolver": "^1.2.3",
     "jest-util": "workspace:*",
     "jest-validate": "workspace:*",
-    "resolve": "^1.20.0",
-    "resolve.exports": "^2.0.0",
-    "slash": "^3.0.0"
+    "slash": "^3.0.0",
+    "unrs-resolver": "^1.7.8"
   },
   "devDependencies": {
-    "@types/graceful-fs": "^4.1.3",
-    "@types/pnpapi": "^0.0.5",
-    "@types/resolve": "^1.20.2"
+    "@types/graceful-fs": "^4.1.3"
   },
   "engines": {
     "node": "^18.14.0 || ^20.0.0 || ^22.0.0 || >=24.0.0"
