--- a/package.json
+++ b/package.json
@@ -3,49 +3,49 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@babel/core": "^7.27.1",
+    "@babel/core": "^7.27.4",
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
-    "@babel/preset-typescript": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@crowdin/cli": "^4.0.0",
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint/js": "^9.21.0",
+    "@babel/preset-typescript": "^7.27.1",
+    "@babel/register": "^7.27.1",
+    "@crowdin/cli": "^4.7.0",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "@eslint/js": "^9.28.0",
     "@eslint/markdown": "^6.4.0",
     "@jest/globals": "workspace:*",
     "@jest/test-utils": "workspace:*",
-    "@lerna-lite/cli": "^3.0.0",
-    "@lerna-lite/exec": "^4.2.0",
-    "@lerna-lite/publish": "^3.0.0",
+    "@lerna-lite/cli": "^4.3.0",
+    "@lerna-lite/exec": "^4.3.0",
+    "@lerna-lite/publish": "^4.3.0",
     "@microsoft/api-extractor": "^7.35.0",
     "@tsconfig/node18": "^18.2.4",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
     "@types/node": "^18.14",
-    "@types/which": "^3.0.0",
+    "@types/which": "^3.0.4",
     "ansi-regex": "^5.0.1",
-    "ansi-styles": "^5.0.0",
+    "ansi-styles": "^5.2.0",
     "babel-jest": "workspace:*",
-    "babel-loader": "^9.0.0",
-    "camelcase": "^6.2.0",
-    "chalk": "^4.0.0",
-    "dedent": "^1.0.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-import-resolver-typescript": "^4.0.0",
-    "eslint-plugin-import-x": "^4.12.2",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-jsdoc": "^50.0.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "babel-loader": "^9.2.1",
+    "camelcase": "^6.3.0",
+    "chalk": "^4.1.2",
+    "dedent": "^1.6.0",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.2",
+    "eslint-plugin-import-x": "^4.15.0",
+    "eslint-plugin-jest": "^28.12.0",
+    "eslint-plugin-jsdoc": "^50.7.1",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-unicorn": "^59.0.0",
-    "execa": "^5.0.0",
-    "find-process": "^1.4.1",
+    "eslint-plugin-unicorn": "^59.0.1",
+    "execa": "^5.1.1",
+    "find-process": "^1.4.10",
     "glob": "^10.3.10",
-    "globals": "^16.0.0",
-    "graceful-fs": "^4.2.9",
+    "globals": "^16.2.0",
+    "graceful-fs": "^4.2.11",
     "isbinaryfile": "^5.0.4",
     "istanbul-lib-coverage": "^3.0.0",
     "istanbul-lib-report": "^3.0.0",
@@ -62,13 +62,13 @@
     "jquery": "^3.2.1",
     "js-yaml": "^4.1.0",
     "micromatch": "^4.0.8",
-    "mock-fs": "^5.1.2",
+    "mock-fs": "^5.5.0",
     "netlify-plugin-cache": "^1.0.3",
-    "node-notifier": "^10.0.0",
+    "node-notifier": "^10.0.1",
     "p-limit": "^3.1.0",
     "pkg-dir": "^5.0.0",
     "prettier": "^3.0.3",
-    "promise": "^8.0.2",
+    "promise": "^8.3.0",
     "read-pkg": "^5.2.0",
     "resolve": "^1.20.0",
     "rimraf": "^5.0.10",
@@ -77,9 +77,9 @@
     "strip-json-comments": "^3.1.1",
     "tempy": "^1.0.1",
     "ts-node": "^10.5.0",
-    "tstyche": "^4.0.0-rc.1",
+    "tstyche": "^4.0.0",
     "typescript": "^5.0.4",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.33.1",
     "webpack": "^5.68.0",
     "webpack-node-externals": "^3.0.0",
     "which": "^4.0.0"
